--- a/Homework/Week 5/SVG3/styles/svg3.css
+++ b/Homework/Week 5/SVG3/styles/svg3.css
@@ -14,7 +14,7 @@
 {
    opacity:0;
    /*fill:#e0e0e0;*/
-   fill:#fcbba1;
+   fill:#fee0d2;
    stroke:#000000;
    stroke-width:0.5;
 }
@@ -41,7 +41,7 @@
 {
    opacity:0;
    /*fill:#e0e0e0;*/
-   fill:#fcbba1;
+   fill:#fee0d2;
    stroke:#000000;
    stroke-width:0.3;
 }
@@ -56,7 +56,7 @@
 {
    opacity:0;
    /*fill:#e0e0e0;*/
-   fill:#fcbba1;
+   fill:#fee0d2;
    stroke:#000000;
    stroke-width:0.5;
 }
@@ -67,7 +67,7 @@
 .landxx
 {
    /*fill:#e0e0e0;*/
-   fill: #fcbba1;
+   fill: #fee0d2;
    stroke:#ffffff;
    stroke-width:0.5;
    fill-rule:evenodd;
@@ -79,7 +79,7 @@
 .coastxx
 {
    /*fill:#e0e0e0;*/
-   fill: #fcbba1;
+   fill: #fee0d2;
    stroke:#ffffff;
    stroke-width:0.3;
    fill-rule:evenodd;
@@ -91,7 +91,7 @@
 .limitxx
 {
    /*fill:#e0e0e0;*/
-   fill: #fcbba1;
+   fill: #fee0d2;
    stroke:#ffffff;
    stroke-width:0;
    fill-rule:evenodd;
@@ -103,7 +103,7 @@
 .antxx
 {
    /*fill:#e0e0e0;*/
-   fill: #fcbba1;
+   fill: #fee0d2;
    stroke:#ffffff;
    stroke-width:0;
    fill-rule:evenodd;
@@ -117,30 +117,7 @@
    opacity: 1;
    color: #000000;
    fill:#ffffff;
-   /*fill: #787878;*/
    stroke:#000;
    stroke-width:0.5;
    stroke-miterlimit:1;
 }
-
-/*
- * Additional style rules
- *
- * The following are examples of colouring countries.  You can substitute these with your own styles to colour the countries on the map.
- *
- * Color a few countries:
- *
- * .gb, .au, .nc
- * {
- *    fill:       #ff0000;
- * }
- *
- * Color a few small country circles (and the countries):
- *
- * .ms, .ky
- * {
- *    opacity:    1;
- *    fill:       #ff0000;
- * }
- *
- */
